# latexDSL

./: .gitignore  CMakeLists.txt  README.md
include/ast/: node.h
include/errors/: LexicalError.h  ParseError.h
include/lexer/: lexer.h  token_names.h  token_symbols.h
include/parser/: node_type_names.h  parser.h
include/renderer/: latexGenerator.h
include/utils/: ast_utils.h
spec/: grammar.md
src/utils/: ast_utils.cpp
tests/: lexer_tests.cpp  parser_tests.cpp  renderer_tests.cpp
tools/repl/: main.cpp  preview.html  template.html
